2005-10-30  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: make "application/x-lyx" subclass of
	"text/plain" and add "text/x-lyx" as alias. Thanks to Filip Van
	Raemdonck and Abel Cheung. Fixes #1269.

2005-10-30  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: make "application/x-font-type1" subclass of
	"application/postscript". Thanks to Stephane Loeuillet. Fixes #1161.

2005-10-30  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: change dBASE comment, add aliases.
	Thanks to J.H.M Dassen. Fixes #3147.

2005-10-30  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: add Lotus 1-2-3 aliases. Thanks to J.H.M
	Dassen. Fixes #3144.

2005-10-30  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: add dia magic pattern. Thanks to J.H.M
	Dassen. Fixes #3142.

2005-10-29  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: add a bunch of Real formats, remove real
	audio glob since it breaks metafiles. Thanks to Ryan Gammon. Fixes
	#2342.

2005-10-29  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: add "*.kino" glob pattern, and magic
	patterns to "application/smil". Thanks to J.H.M Dassen. Fixes #3141.

2005-10-29  Christian Neumair  <chris@gnome-de.org>

	* .cvsignore: add freedesktop.org.xml.
	* freedesktop.org.xml: remove from CVS, since it is auto-generated on
	make dist.

2005-10-29  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: add "application/x-m4" MIME type. Thanks to
	Macro Pesenti Gritti. Fixes #2049.

2005-10-29  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: add a bunch of aliases for
	"application/vnd.ms-access", change its description. Thanks to
	Jarosław Staniek. Fixes #3179.

2005-10-29  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: add "application/x-go-sgf" MIME type. Thanks
	to Peter Lundqvist. Fixes #592.

2005-10-29  Christian Neumair  <chris@gnome-de.org>
