@@ -177,10 +177,15 @@ command to generate the output files.
       <match type="string" value="&lt;smil " offset="0:256"/>
     </magic>
   </mime-type>
-  <mime-type type="application/x-sqlite">
-    <_comment>SQLite database</_comment>
+  <mime-type type="application/x-sqlite2">
+    <_comment>SQLite2 database</_comment>
     <magic>
       <match type="string" value="** This file contains an SQLite" offset="0"/>
+    </magic>
+  </mime-type>
+  <mime-type type="application/x-sqlite3">
+    <_comment>SQLite3 database</_comment>
+    <magic>
       <match type="string" value="SQLite format 3" offset="0"/>
     </magic>
   </mime-type>
